# OCR_Road_Sign

./: .gitignore  Dockerfile  Dockerfile.jetson  Dockerfile.mac  README.md  app.py  deployment.yaml  docker-compose.yml  hpa.yaml  pyproject.toml  requirements-jetson.txt  requirements-mac.txt  requirements.txt  requirements_old.txt  service.yaml  stress_test.py
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters_ocr.yml
src/kedro_road_sign/: __main__.py  settings.py
src/kedro_road_sign/datasets/: torch_model_dataset.py  video_dataset.py
src/kedro_road_sign/pipelines/ocr/: __init__.py  nodes.py  pipeline.py
tests/pipelines/ocr/: test_pipeline.py
