[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_road_sign"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-road-sign = "kedro_road_sign.__main__:main"

[tool.kedro]
package_name = "kedro_road_sign"
project_name = "kedro_road_sign"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_road_sign.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "80647ccb33e545e8abc9cdb4b4015f05"
